src/antlr_files/AutomataParser.py
# Generated from Automata.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AutomataParser ( Parser ):

    grammarFileName = "Automata.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':'", "'('", "')'", "'*'", "'?'", "'|'", "'\\n'" ]

    symbolicNames = [ "<INVALID>", "STRING", "COMMENT", "CS", "COLON", "LEFT_PARENTHESIS", 
                      "RIGHT_PARENTHESIS", "STAR", "MAYBE", "ALTERANTIVE", 
                      "EOL", "WS" ]

    RULE_s = 0
    RULE_line = 1
    RULE_comment = 2
    RULE_rule = 3
    RULE_expr = 4
    RULE_alternative = 5
    RULE_non_alternative = 6
    RULE_parentheses = 7
    RULE_star = 8
    RULE_maybe = 9
    RULE_simple_expr = 10
    RULE_non_terminal_name = 11

    ruleNames =  [ "s", "line", "comment", "rule", "expr", "alternative", 
                   "non_alternative", "parentheses", "star", "maybe", "simple_expr", 
                   "non_terminal_name" ]

    EOF = Token.EOF
    STRING=1
    COMMENT=2
    CS=3
    COLON=4
    LEFT_PARENTHESIS=5
    RIGHT_PARENTHESIS=6
    STAR=7
    MAYBE=8
    ALTERANTIVE=9
    EOL=10
    WS=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutomataParser.LineContext)
            else:
                return self.getTypedRuleContext(AutomataParser.LineContext,i)


        def getRuleIndex(self):
            return AutomataParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitS" ):
                return visitor.visitS(self)
            else:
                return visitor.visitChildren(self)




    def s(self):

        localctx = AutomataParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_s)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AutomataParser.COMMENT or _la==AutomataParser.CS:
                self.state = 24
                self.line()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_(self):
            return self.getTypedRuleContext(AutomataParser.RuleContext,0)


        def comment(self):
            return self.getTypedRuleContext(AutomataParser.CommentContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = AutomataParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AutomataParser.CS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.rule_()
                pass
            elif token in [AutomataParser.COMMENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(AutomataParser.COMMENT, 0)

        def getRuleIndex(self):
            return AutomataParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = AutomataParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(AutomataParser.COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_terminal_name(self):
            return self.getTypedRuleContext(AutomataParser.Non_terminal_nameContext,0)


        def COLON(self):
            return self.getToken(AutomataParser.COLON, 0)

        def expr(self):
            return self.getTypedRuleContext(AutomataParser.ExprContext,0)


        def EOF(self):
            return self.getToken(AutomataParser.EOF, 0)

        def EOL(self):
            return self.getToken(AutomataParser.EOL, 0)

        def getRuleIndex(self):
            return AutomataParser.RULE_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule" ):
                listener.enterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule" ):
                listener.exitRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule" ):
                return visitor.visitRule(self)
            else:
                return visitor.visitChildren(self)




    def rule_(self):

        localctx = AutomataParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rule)
        try:
            self.state = 46
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.non_terminal_name()
                self.state = 37
                self.match(AutomataParser.COLON)
                self.state = 38
                self.expr()
                self.state = 39
                self.match(AutomataParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.non_terminal_name()
                self.state = 42
                self.match(AutomataParser.COLON)
                self.state = 43
                self.expr()
                self.state = 44
                self.match(AutomataParser.EOL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_alternative(self):
            return self.getTypedRuleContext(AutomataParser.Non_alternativeContext,0)


        def alternative(self):
            return self.getTypedRuleContext(AutomataParser.AlternativeContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = AutomataParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expr)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.non_alternative()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.alternative()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlternativeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_alternative(self):
            return self.getTypedRuleContext(AutomataParser.Non_alternativeContext,0)


        def ALTERANTIVE(self):
            return self.getToken(AutomataParser.ALTERANTIVE, 0)

        def expr(self):
            return self.getTypedRuleContext(AutomataParser.ExprContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_alternative

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlternative" ):
                listener.enterAlternative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlternative" ):
                listener.exitAlternative(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlternative" ):
                return visitor.visitAlternative(self)
            else:
                return visitor.visitChildren(self)




    def alternative(self):

        localctx = AutomataParser.AlternativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_alternative)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.non_alternative()
            self.state = 53
            self.match(AutomataParser.ALTERANTIVE)
            self.state = 54
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_alternativeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def star(self):
            return self.getTypedRuleContext(AutomataParser.StarContext,0)


        def non_alternative(self):
            return self.getTypedRuleContext(AutomataParser.Non_alternativeContext,0)


        def maybe(self):
            return self.getTypedRuleContext(AutomataParser.MaybeContext,0)


        def parentheses(self):
            return self.getTypedRuleContext(AutomataParser.ParenthesesContext,0)


        def simple_expr(self):
            return self.getTypedRuleContext(AutomataParser.Simple_exprContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_non_alternative

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNon_alternative" ):
                listener.enterNon_alternative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNon_alternative" ):
                listener.exitNon_alternative(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_alternative" ):
                return visitor.visitNon_alternative(self)
            else:
                return visitor.visitChildren(self)




    def non_alternative(self):

        localctx = AutomataParser.Non_alternativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_non_alternative)
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.star()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.star()
                self.state = 58
                self.non_alternative()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.maybe()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 61
                self.maybe()
                self.state = 62
                self.non_alternative()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 64
                self.parentheses()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 65
                self.parentheses()
                self.state = 66
                self.non_alternative()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 68
                self.simple_expr()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 69
                self.simple_expr()
                self.state = 70
                self.non_alternative()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParenthesesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PARENTHESIS(self):
            return self.getToken(AutomataParser.LEFT_PARENTHESIS, 0)

        def expr(self):
            return self.getTypedRuleContext(AutomataParser.ExprContext,0)


        def RIGHT_PARENTHESIS(self):
            return self.getToken(AutomataParser.RIGHT_PARENTHESIS, 0)

        def getRuleIndex(self):
            return AutomataParser.RULE_parentheses

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentheses" ):
                listener.enterParentheses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentheses" ):
                listener.exitParentheses(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParentheses" ):
                return visitor.visitParentheses(self)
            else:
                return visitor.visitChildren(self)




    def parentheses(self):

        localctx = AutomataParser.ParenthesesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parentheses)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(AutomataParser.LEFT_PARENTHESIS)
            self.state = 75
            self.expr()
            self.state = 76
            self.match(AutomataParser.RIGHT_PARENTHESIS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parentheses(self):
            return self.getTypedRuleContext(AutomataParser.ParenthesesContext,0)


        def STAR(self):
            return self.getToken(AutomataParser.STAR, 0)

        def simple_expr(self):
            return self.getTypedRuleContext(AutomataParser.Simple_exprContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_star

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStar" ):
                listener.enterStar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStar" ):
                listener.exitStar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStar" ):
                return visitor.visitStar(self)
            else:
                return visitor.visitChildren(self)




    def star(self):

        localctx = AutomataParser.StarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_star)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AutomataParser.LEFT_PARENTHESIS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.parentheses()
                self.state = 79
                self.match(AutomataParser.STAR)
                pass
            elif token in [AutomataParser.STRING, AutomataParser.CS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.simple_expr()
                self.state = 82
                self.match(AutomataParser.STAR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MaybeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parentheses(self):
            return self.getTypedRuleContext(AutomataParser.ParenthesesContext,0)


        def MAYBE(self):
            return self.getToken(AutomataParser.MAYBE, 0)

        def simple_expr(self):
            return self.getTypedRuleContext(AutomataParser.Simple_exprContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_maybe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMaybe" ):
                listener.enterMaybe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMaybe" ):
                listener.exitMaybe(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMaybe" ):
                return visitor.visitMaybe(self)
            else:
                return visitor.visitChildren(self)




    def maybe(self):

        localctx = AutomataParser.MaybeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_maybe)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AutomataParser.LEFT_PARENTHESIS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.parentheses()
                self.state = 87
                self.match(AutomataParser.MAYBE)
                pass
            elif token in [AutomataParser.STRING, AutomataParser.CS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.simple_expr()
                self.state = 90
                self.match(AutomataParser.MAYBE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CS(self):
            return self.getToken(AutomataParser.CS, 0)

        def STRING(self):
            return self.getToken(AutomataParser.STRING, 0)

        def getRuleIndex(self):
            return AutomataParser.RULE_simple_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_expr" ):
                listener.enterSimple_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_expr" ):
                listener.exitSimple_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_expr" ):
                return visitor.visitSimple_expr(self)
            else:
                return visitor.visitChildren(self)




    def simple_expr(self):

        localctx = AutomataParser.Simple_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_simple_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==AutomataParser.STRING or _la==AutomataParser.CS):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_terminal_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CS(self):
            return self.getToken(AutomataParser.CS, 0)

        def non_terminal_name(self):
            return self.getTypedRuleContext(AutomataParser.Non_terminal_nameContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_non_terminal_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNon_terminal_name" ):
                listener.enterNon_terminal_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNon_terminal_name" ):
                listener.exitNon_terminal_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_terminal_name" ):
                return visitor.visitNon_terminal_name(self)
            else:
                return visitor.visitChildren(self)




    def non_terminal_name(self):

        localctx = AutomataParser.Non_terminal_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_non_terminal_name)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(AutomataParser.CS)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(AutomataParser.CS)
                self.state = 98
                self.non_terminal_name()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





